shesmu-server/src/test/resources/bad/interpolation-boolean.shesmu
Input gsi_std;

Define standard_execution()
  Where "{True}" != "";
